# jupysheets

./: .clasp.json  .gitignore  JUSTFILE  README.md  index.html  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
gas/: .gitignore  index.html  main.ts  package.json  tsconfig.json  vite.config.ts
jl/: .gitignore  README.md  pyproject.toml  starter.ipynb
jl/config/: jupyter-lite.json  overrides.json
jl/extension/: .gitignore  .prettierignore  LICENSE  README.md  install.json  package.json  pyproject.toml
jl/extension/jupysheets/: __init__.py
jl/extension/src/: index.ts
jl/wheelhouse/: jupysheets.whl
public/: server.js
